# Chronoporia

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
msvc/: chronoporia.sln  chronoporia_server.vcxproj  chronoporia_server.vcxproj.filters
plugins/: CMakeLists.txt  base_breakpoint_plugin.h  plugins.vcxproj  plugins.vcxproj.filters
plugins/cpp/: cpp.vcxproj  cpp_breakpoint_plugin.cpp  cpp_breakpoint_plugin.h
pmu_driver/: .clangd  main.cpp  packages.config  pmu_driver.inf  pmu_driver.vcxproj  pmu_driver.vcxproj.filters
src/: event_log.cpp  event_log.h  globals.cpp  globals.h  main.cpp  resource.h  resources.rc  snapshot_log.cpp  snapshot_log.h
src/Events/: base_event.h  memory_events.h  shared_library_events.cpp  shared_library_events.h  snapshot_events.cpp  snapshot_events.h  thread_events.cpp  thread_events.h
src/execution_state_machine/: state_machine.cpp  state_machine.h
src/execution_state_machine/execution_phase/: base_execution.h  debugger_phase.cpp  debugger_phase.h  error_phase.h  playback_phase.h  process_start_phase.cpp  process_start_phase.h  reconstruction_phase.cpp  reconstruction_phase.h  record_phase.cpp  record_phase.h  time_restore_phase.cpp  time_restore_phase.h
src/execution_state_machine/transitions/: debugger_transition.h  error_transition.h  playback_transition.h  reconstruction_transition.h  record_transition.h  time_restore_transition.h  transition.h  transition_variant.h  transitions_box.cpp  transitions_box.h
src/managers/: breakpoint_manager.cpp  breakpoint_manager.h  memory_manager.cpp  memory_manager.h  module_manager.cpp  module_manager.h  nondeterminism_manager.h  plugin_manager.cpp  plugin_manager.h  thread_manager.cpp  thread_manager.h  trampoline_manager.cpp  trampoline_manager.h
src/utils/: execution_tree.h  fully_persistent_array.h  module_utils.cpp  module_utils.h  partially_persistent_arrays.h  shellcode.cpp  shellcode.h  thread_utils.cpp  thread_utils.h  trampoline.cpp  trampoline.h
src/utils/asm/: unload_dll.asm
src/windows/: nt_debug_process.cpp  nt_debug_process.h  nt_undocumented.cpp  nt_undocumented.h  nt_wrappers.cpp  nt_wrappers.h
test_driver/: test_driver.vcxproj  test_driver.vcxproj.filters  test_pmu_driver.cpp  test_pmu_driver.h
test_scripts/python/: simple_python.py  test_functions.py  test_heavy_python.py  test_sleep.py
tests/: CMakeLists.txt  dummy_dll_1.cpp  test_unload_dll.cpp  test_unload_dll.h  tests.vcxproj  tests.vcxproj.filters
unit_tests/: CMakeLists.txt  quill_backend_impl.cpp  test_breakpoint_manager.cpp  test_event_log.cpp  test_execution_tree.cpp  test_fully_persistent_array.cpp  test_memory_manager.cpp  test_module_manager.cpp  test_module_utils.cpp  test_snapshot_log.cpp  test_thread_manager.cpp  test_thread_utils.cpp  test_trampoline.cpp
